--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,488 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font-family), sans-serif;
+  font-size: 18px;
+  background-color: var(--bg-color);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-image: repeating-linear-gradient(to right,
+      var(--grad-color),
+      var(--grad-color) 2px,
+      transparent 2px,
+      transparent 4px),
+    repeating-linear-gradient(to bottom,
+      var(--grad-color),
+      var(--grad-color) 2px,
+      transparent 2px,
+      transparent 4px),
+    linear-gradient(var(--grad-color-from), var(--grad-color-to) 100%);
+
+
+}
+
+.header {
+  width: 100%;
+  padding-top: 100px;
+  background-attachment: fixed;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.header-content {
+  width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
+  min-height: 323px;
+  border: 2px solid var(--main-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: clamp(7.625rem, 7.273rem + 1.502vw, 8.625rem) 0 70px;
+  background-color: var(--bg-color);
+  margin-block-end: 100px;
+}
+
+.logo_link {
+  text-decoration: none;
+  font-family: var(--accent-font-family);
+  text-transform: uppercase;
+  font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
+  font-weight: 400;
+  color: var(--main-color);
+}
+
+.header_title {
+  font-family: var(--accent-font-family);
+  text-transform: uppercase;
+  font-size: clamp(0.875rem, 0.677rem + 0.845vw, 1.438rem);
+  font-weight: 400;
+  color: var(--main-color);
+}
+
+.theme-menu__button {
+  border-style: none;
+  background-color: transparent;
+  color: var(--main-color);
+  cursor: pointer;
+  position: relative;
+  transition: width 0.3s;
+}
+
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  transition: 0.3s ease;
+  pointer-events: none;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: 0.3s ease;
+}
+
+
+.theme-menu__button:before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  top: 15px;
+  background-color: var(--main-color);
+  width: 0;
+  transition: width 0.3s ease-out;
+}
+
+
+
+.theme-menu__button:focus-visible::before {
+  width: 100%;
+  transition: 0.3s;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 14px;
+}
+
+.theme-menu__item {
+  font-family: var(--accent-font-family);
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+  outline: none;
+}
+
+.theme-menu__button:disabled:after {
+  content: '▶';
+  position: absolute;
+  left: -20px;
+  /* margin-right: 10px; */
+  animation: arrow 0.5s ease-in-out alternate infinite;
+}
+
+
+
+.card {
+  width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
+  min-height: 823px;
+  border: 2px solid var(--main-color);
+  margin: auto;
+  background-color: var(--bg-color);
+}
+
+.card_title {
+  font-family: var(--main-font-family);
+  font-weight: ;
+  color: var(--main-color);
+  border-bottom: 2px solid var(--main-color);
+  line-height: 42px;
+  padding-left: 5px;
+}
+
+.card_img-box {
+  width: 100%;
+  height: clamp(23.188rem, 16.035rem + 30.516vw, 43.5rem);
+  border-bottom: 2px solid var(--main-color);
+  position: relative;
+  background-image: url(../images/image.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* .card_img {
+  width: 100%;
+  object-fit: cover ;
+  overflow: hidden;
+} */
+
+.label {
+  font-family: var(--accent-font-family);
+  font-size: 14px;
+  color: var(--main-color);
+  -webkit-text-stroke: 1px;
+  font-weight: 700;
+  text-shadow:
+    -1px 0 var(--bg-color),
+    0 1px var(--bg-color),
+    1px 0 var(--bg-color),
+    0 -1px var(--bg-color);
+  mix-blend-mode: hard-light;
+  text-transform: uppercase;
+  filter: opacity(50%);
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+@supports((text-stroke: 1px var(--bg-color)) or (-webkit-text-stroke: 1px var(--bg-color))) {
+  .label {
+    -webkit-text-stroke: 1px var(--bg-color);
+    text-stroke: 1px var(--bg-color);
+    text-shadow: none;
+  }
+}
+
+.card_text-box {
+  height: fit-content;
+  padding: 25px;
+}
+
+.card_text {
+  color: var(--main-color);
+  font-size: 18px;
+}
+
+.card_text:not(:last-child) {
+  margin-bottom: 25px;
+}
+
+
+.card_button-box {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  position: relative;
+  padding: 25px;
+
+}
+
+
+.card__icon-button {
+  width: 42px;
+  height: 38px;
+  border: none;
+  margin-inline-end: 10px;
+  margin-block-end: 7px;
+  background-color: transparent;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--main-color);
+}
+
+
+.card__like-button {
+  border: 2px solid var(--main-color);
+  background-color: transparent;
+  width: 130px;
+  height: 38px;
+  cursor: pointer;
+  position: relative;
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--main-color);
+  transition: box-shadow 0.3s;
+}
+
+.card__like-button:before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 0;
+  height: 100%;
+  background-color: var(--main-color);
+  z-index: 1;
+  transition: width 0.5s ease-in-out;
+}
+
+.card__like-button:hover:before {
+  width: 100%;
+  transition: width 0.5s ease-in-out;
+}
+
+
+.button__text {
+  font-family: var(--accent-font-family);
+  font-weight: var(--main-font-weight);
+  color: var(--blend-color);
+  font-size: 14px;
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+  mix-blend-mode: difference;
+}
+
+.like-icon {
+  fill: var(--main-color);
+  cursor: pointer;
+}
+
+
+.floppy_button-box {
+  margin: 100px 0 100px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-content: center;
+
+}
+
+.floppy_button {
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  width: clamp(19.125rem, 18.047rem + 4.601vw, 22.188rem);
+  min-height: 55px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.floppy_button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--main-color);
+  transition: box-shadow 0.3s;
+}
+
+.floppy_button:before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 0;
+  height: 100%;
+  background-color: var(--main-color);
+  transition: width 0.5s ease-in-out;
+
+}
+
+.floppy_button:hover:before {
+  width: 100%;
+  transition: width 0.5s ease-in-out;
+}
+
+
+
+.floppy {
+  fill: var(--blend-color);
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+  position: relative;
+  z-index: 2;
+}
+
+.floppy-modal {
+  fill: var(--main-color);
+ inline-size: 39px;
+ block-size: 39px;
+}
+
+.sparks {
+  filter: opacity(100%);
+}
+
+.like-icon:hover .core {
+  fill: var(--main-color);
+  transition: fill 0.3s;
+}
+
+.core {
+  transition: fill 0.3s;
+  animation-delay: 0.03s;
+}
+
+
+.like-icon:hover .main-body {
+  fill: var(--main-color);
+  transition: fill 0.3s;
+  animation-delay: 0.05s;
+}
+
+.main-body {
+  transition: fill 0.3s;
+}
+
+
+.like-icon:active .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+  animation-delay: 0.05s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+  animation-delay: 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--contour-color);
+  transition: fill 0.3s;
+  animation-delay: 0.06s;
+}
+
+.like-icon.is-liked .heart {
+  animation: heart 0.3s ease-in 1;
+  animation-delay: 0.1s;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 1 alternate;
+  animation-delay: 0.3s;
+}
+
+.contour {
+  transition: fill 0.1 linear;
+}
+
+
+#dialog {
+  width: 357px;
+  height: 193px;
+  padding: 30px 30px 28px;
+}
+
+#dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.3);
+  backdrop-filter: blur(7px);
+}
+
+.text-modal {
+  font-family: var(--accent-font-family);
+  font-weight: var(--main-font-weight);
+  color: var(--main-color);
+  font-size: 14px;
+  inline-size: 234px;
+  line-height: 21px;
+}
+
+.button_close-dialog {
+  font-family: var(--accent-font-family);
+  font-weight: var(--main-font-weight);
+  color: var(--main-color);
+  font-size: 14px;
+  text-transform: uppercase;
+  width: 293px;
+  height: 38px;
+  outline: none;
+  border: 2px solid var(--main-color);
+}
+
+.content-modal {
+  height: 63px;
+  display: flex;
+  gap:20px;
+  align-items: center;
+  margin-block-end: 28px;
+
+}
+
+@keyframes heart {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.2;
+  }
+}
+
+@keyframes sparks {
+  0% {
+    fill: none;
+  }
+  100% {
+    fill: var(--contour-color)
+  }
+}
+
+@keyframes arrow {
+  0% {
+    left: -20px;
+  }
+  100% {
+    left: -24px;
+  }
 }
