--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --main-font-family: 'Inter';
+    --accent-font-family: 'PressStart2P';
+    --main-color: #000000;
+    --bg-color: #fff;
+    --grad-color: #d3d3d3;
+    --grad-color-from: #e7e7e7;
+    --grad-color-to: #1a1a1a;
+    --grad-height: 51%;
+    --accent-font-weight: 700;
+    --main-font-weight: 400;
+    --contour-color:  #FF0000;
+    --blend-color: #fff;
+
+}
