--- a/styles/style.css
+++ b/styles/style.css
@@ -15,490 +15,557 @@
 */
 
 .page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
-  font-family: var(--main-font-family), sans-serif;
-  font-size: 18px;
-  background-color: var(--bg-color);
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  background-image: repeating-linear-gradient(to right,
-      var(--grad-color),
-      var(--grad-color) 2px,
-      transparent 2px,
-      transparent 4px),
-    repeating-linear-gradient(to bottom,
-      var(--grad-color),
-      var(--grad-color) 2px,
-      transparent 2px,
-      transparent 4px),
-    linear-gradient(var(--grad-color-from), var(--grad-color-to) 100%);
-
-
+    min-inline-size: 320px;
+    min-block-size: 100dvb;
+    font-family: var(--main-font-family), sans-serif;
+    font-variation-settings: "wdth" var(--main-font-weight),
+        "wdth" var(--accent-font-weight);
+    font-size: 18px;
+    background-color: var(--bg-color);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: repeating-linear-gradient(
+            to right,
+            var(--grad-color),
+            var(--grad-color) 2px,
+            transparent 2px,
+            transparent 4px
+        ),
+        repeating-linear-gradient(
+            to bottom,
+            var(--grad-color),
+            var(--grad-color) 2px,
+            transparent 2px,
+            transparent 4px
+        ),
+        linear-gradient(var(--grad-color-from), var(--grad-color-to) 100%);
 }
 
 .header {
-  width: 100%;
-  padding-top: 100px;
-  background-attachment: fixed;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
+    width: 100%;
+    padding-top: 100px;
+    background-attachment: fixed;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .header-content {
-  width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
-  min-height: 323px;
-  border: 2px solid var(--main-color);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  padding: clamp(7.625rem, 7.273rem + 1.502vw, 8.625rem) 0 70px;
-  background-color: var(--bg-color);
-  margin-block-end: 100px;
+    width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
+    min-height: 323px;
+    border: 2px solid var(--main-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: clamp(7.625rem, 7.273rem + 1.502vw, 8.625rem) 0 23px;
+    background-color: var(--bg-color);
+    margin-block-end: 100px;
 }
 
 .logo_link {
-  text-decoration: none;
-  font-family: var(--accent-font-family);
-  text-transform: uppercase;
-  font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
-  font-weight: 400;
-  color: var(--main-color);
+    text-decoration: none;
+    font-family: var(--accent-font-family);
+    text-transform: uppercase;
+    font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
+    font-weight: 400;
+    color: var(--main-color);
 }
 
 .header_title {
-  font-family: var(--accent-font-family);
-  text-transform: uppercase;
-  font-size: clamp(0.875rem, 0.677rem + 0.845vw, 1.438rem);
-  font-weight: 400;
-  color: var(--main-color);
+    font-family: var(--accent-font-family);
+    text-transform: uppercase;
+    font-size: clamp(0.875rem, 0.677rem + 0.845vw, 1.438rem);
+    font-weight: var(--main-font-weight);
+    color: var(--main-color);
+}
+
+.theme-menu {
+    padding-left: 15px;
 }
 
 .theme-menu__button {
-  border-style: none;
-  background-color: transparent;
-  color: var(--main-color);
-  cursor: pointer;
-  position: relative;
-  transition: width 0.3s;
+    border-style: none;
+    background-color: transparent;
+    color: var(--main-color);
+    cursor: pointer;
+    position: relative;
+    transition: width 0.3s;
+    text-transform: uppercase;
 }
 
-
 .theme-menu__button:disabled {
-  opacity: 0.6;
-  transition: 0.3s ease;
-  pointer-events: none;
+    opacity: 0.6;
+    transition: 0.3s ease;
+    pointer-events: none;
 }
 
 .theme-menu__button:hover {
-  opacity: 0.6;
-  transition: 0.3s ease;
+    opacity: 0.6;
+    transition: 0.3s ease;
 }
-
 
 .theme-menu__button:before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  top: 15px;
-  background-color: var(--main-color);
-  width: 0;
-  transition: width 0.3s ease-out;
+    content: "";
+    position: absolute;
+    height: 2px;
+    top: 15px;
+    background-color: var(--main-color);
+    width: 0;
+    transition: width 0.3s ease-out;
 }
 
-
-
 .theme-menu__button:focus-visible::before {
-  width: 100%;
-  transition: 0.3s;
+    width: 100%;
+    transition: width 0.3s;
 }
 
 .theme-menu__button:focus {
-  outline: none;
-  opacity: 0.6;
+    outline: none;
+    opacity: 0.6;
 }
 
-
 .theme-menu__list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 14px;
 }
 
 .theme-menu__item {
-  font-family: var(--accent-font-family);
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 400;
-  outline: none;
+    font-family: var(--accent-font-family);
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    outline: none;
 }
 
 .theme-menu__button:disabled:after {
-  content: '▶';
-  position: absolute;
-  left: -20px;
-  /* margin-right: 10px; */
-  animation: arrow 0.5s ease-in-out alternate infinite;
+    content: "▶";
+    position: absolute;
+    left: -20px;
+    animation: arrow 0.5s ease-in-out alternate infinite;
 }
 
-
-
 .card {
-  width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
-  min-height: 823px;
-  border: 2px solid var(--main-color);
-  margin: auto;
-  background-color: var(--bg-color);
+    width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
+    border: 2px solid var(--main-color);
+    margin: auto;
+    background-color: var(--bg-color);
+    margin-block-end: 50px;
 }
 
 .card_title {
-  font-family: var(--main-font-family);
-  font-weight: ;
-  color: var(--main-color);
-  border-bottom: 2px solid var(--main-color);
-  line-height: 42px;
-  padding-left: 5px;
+    font-family: var(--main-font-family);
+    font-weight: (--accent-font-weight);
+    color: var(--main-color);
+    font-size: 18px;
+    border-bottom: 2px solid var(--main-color);
+    line-height: 35px;
+    padding: 0 10px;
 }
 
 .card_img-box {
-  width: 100%;
-  height: clamp(23.188rem, 16.035rem + 30.516vw, 43.5rem);
-  border-bottom: 2px solid var(--main-color);
-  position: relative;
-  background-image: url(../images/image.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    width: 100%;
+    height: clamp(23.188rem, 16.035rem + 30.516vw, 43.5rem);
+    border-bottom: 2px solid var(--main-color);
+    position: relative;
 }
 
-/* .card_img {
-  width: 100%;
-  object-fit: cover ;
-  overflow: hidden;
-} */
+.card_img {
+    width: 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
 
 .label {
-  font-family: var(--accent-font-family);
-  font-size: 14px;
-  color: var(--main-color);
-  -webkit-text-stroke: 1px;
-  font-weight: 700;
-  text-shadow:
-    -1px 0 var(--bg-color),
-    0 1px var(--bg-color),
-    1px 0 var(--bg-color),
-    0 -1px var(--bg-color);
-  mix-blend-mode: hard-light;
-  text-transform: uppercase;
-  filter: opacity(50%);
-  position: absolute;
-  top: 20px;
-  right: 20px;
+    font-family: var(--accent-font-family);
+    font-size: 14px;
+    color: var(--main-color);
+    -webkit-text-stroke: 1px;
+    font-weight: 700;
+    text-shadow: -1px 0 var(--bg-color), 0 1px var(--bg-color),
+        1px 0 var(--bg-color), 0 -1px var(--bg-color);
+    mix-blend-mode: hard-light;
+    text-transform: uppercase;
+    filter: opacity(50%);
+    position: absolute;
+    top: 20px;
+    right: 10px;
 }
 
-@supports((text-stroke: 1px var(--bg-color)) or (-webkit-text-stroke: 1px var(--bg-color))) {
-  .label {
-    -webkit-text-stroke: 1px var(--bg-color);
-    text-stroke: 1px var(--bg-color);
-    text-shadow: none;
-  }
+@supports (
+    (text-stroke: 1px var(--bg-color)) or
+        (-webkit-text-stroke: 1px var(--bg-color))
+) {
+    .label {
+        -webkit-text-stroke: 1px var(--bg-color);
+        text-stroke: 1px var(--bg-color);
+        text-shadow: none;
+    }
 }
 
 .card_text-box {
-  height: fit-content;
-  padding: 25px;
+    height: fit-content;
+    padding: 25px 25px 23px;
 }
 
 .card_text {
-  color: var(--main-color);
-  font-size: 18px;
+    color: var(--main-color);
+    font-size: 18px;
 }
 
 .card_text:not(:last-child) {
-  margin-bottom: 25px;
+    margin-bottom: 25px;
 }
-
 
 .card_button-box {
-  display: flex;
-  justify-content: flex-end;
-  align-content: center;
-  position: relative;
-  padding: 25px;
-
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    padding: 0 25px 23px;
 }
 
-
 .card__icon-button {
-  width: 42px;
-  height: 38px;
-  border: none;
-  margin-inline-end: 10px;
-  margin-block-end: 7px;
-  background-color: transparent;
+    width: 42px;
+    height: 38px;
+    border: none;
+    margin-inline-end: 5px;
+    margin-block-end: 3px;
+    margin-block-start: 4px;
+    background-color: transparent;
+    transition: 0.3s;
 }
 
 .card__icon-button:focus {
-  outline: none;
+    outline: none;
 }
 
 .card__icon-button:focus-visible {
-  border: 2px solid var(--main-color);
+    border: 2px solid var(--main-color);
+    transition: 0.3s;
 }
 
-
 .card__like-button {
-  border: 2px solid var(--main-color);
-  background-color: transparent;
-  width: 130px;
-  height: 38px;
-  cursor: pointer;
-  position: relative;
+    border: 2px solid var(--main-color);
+    background-color: transparent;
+    width: 130px;
+    height: 38px;
+    cursor: pointer;
+    position: relative;
+    transition: 0.3s;
 }
 
 .card__like-button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--main-color);
-  transition: box-shadow 0.3s;
+    outline: none;
+    box-shadow: 2px 2px 0 var(--main-color);
+    transition: box-shadow 0.3s;
 }
 
 .card__like-button:before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 0;
-  height: 100%;
-  background-color: var(--main-color);
-  z-index: 1;
-  transition: width 0.5s ease-in-out;
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 0;
+    height: 100%;
+    background-color: var(--main-color);
+    z-index: 1;
+    transition: width 0.5s ease-in-out;
 }
 
 .card__like-button:hover:before {
-  width: 100%;
-  transition: width 0.5s ease-in-out;
+    width: 100%;
+    transition: width 0.5s ease-in-out;
 }
 
-
 .button__text {
-  font-family: var(--accent-font-family);
-  font-weight: var(--main-font-weight);
-  color: var(--blend-color);
-  font-size: 14px;
-  display: inline-block;
-  position: relative;
-  z-index: 2;
-  mix-blend-mode: difference;
+    font-family: var(--accent-font-family);
+    font-weight: var(--main-font-weight);
+    color: var(--blend-color);
+    font-size: 14px;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
+    mix-blend-mode: difference;
 }
 
 .like-icon {
-  fill: var(--main-color);
-  cursor: pointer;
+    fill: var(--main-color);
+    cursor: pointer;
 }
 
-
 .floppy_button-box {
-  margin: 100px 0 100px;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  align-content: center;
-
+    margin: 50px 0 50px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-content: center;
 }
 
 .floppy_button {
-  background-color: var(--bg-color);
-  border: 2px solid var(--main-color);
-  width: clamp(19.125rem, 18.047rem + 4.601vw, 22.188rem);
-  min-height: 55px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-wrap: wrap;
-  position: relative;
+    background-color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    width: clamp(19.125rem, 18.487rem + 2.723vw, 20.938rem);
+    min-height: 55px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    position: relative;
 }
 
 .floppy_button:focus {
-  outline: none;
-  box-shadow: 2px 2px 0 var(--main-color);
-  transition: box-shadow 0.3s;
+    outline: none;
+    box-shadow: 2px 2px 0 var(--main-color);
+    transition: box-shadow 0.3s;
 }
 
 .floppy_button:before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 0;
-  height: 100%;
-  background-color: var(--main-color);
-  transition: width 0.5s ease-in-out;
-
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 0;
+    height: 100%;
+    background-color: var(--main-color);
+    transition: width 0.5s ease-in-out;
 }
 
 .floppy_button:hover:before {
-  width: 100%;
-  transition: width 0.5s ease-in-out;
+    width: 100%;
+    transition: width 0.5s ease-in-out;
 }
 
-
-
 .floppy {
-  fill: var(--blend-color);
-  inline-size: 21px;
-  block-size: 21px;
-  mix-blend-mode: difference;
-  position: relative;
-  z-index: 2;
+    fill: var(--blend-color);
+    inline-size: 21px;
+    block-size: 21px;
+    mix-blend-mode: difference;
+    position: relative;
+    z-index: 2;
 }
 
 .floppy-modal {
-  fill: var(--main-color);
- inline-size: 39px;
- block-size: 39px;
+    fill: var(--main-color);
+    inline-size: 39px;
+    block-size: 39px;
+    align-self: center;
 }
 
 .sparks {
-  filter: opacity(100%);
+    filter: opacity(100%);
 }
 
 .like-icon:hover .core {
-  fill: var(--main-color);
-  transition: fill 0.3s;
+    fill: var(--main-color);
+    transition: fill 0.3s;
 }
 
 .core {
-  transition: fill 0.3s;
-  animation-delay: 0.03s;
+    fill: transparent;
+    transition: fill 0.3s;
+    animation-delay: 0.03s;
 }
 
-
 .like-icon:hover .main-body {
-  fill: var(--main-color);
-  transition: fill 0.3s;
-  animation-delay: 0.05s;
+    fill: var(--main-color);
+    transition: fill 0.3s;
+    animation-delay: 0.05s;
 }
 
 .main-body {
-  transition: fill 0.3s;
+    fill: transparent;
+    transition: fill 0.3s;
 }
 
-
 .like-icon:active .core {
-  fill: var(--contour-color);
-  transition: fill 0.3s;
+    fill: var(--contour-color);
+    transition: fill 0.3s;
 }
 
 .like-icon:active .main-body {
-  fill: var(--contour-color);
-  transition: fill 0.3s;
-  animation-delay: 0.05s;
+    fill: var(--contour-color);
+    transition: fill 0.3s 0.05s;
 }
 
 .like-icon.is-liked .core {
-  fill: var(--contour-color);
-  transition: fill 0.3s;
+    fill: var(--contour-color);
+    transition: fill 0.3s;
 }
 
 .like-icon.is-liked .main-body {
-  fill: var(--contour-color);
-  transition: fill 0.3s;
-  animation-delay: 0.05s;
+    fill: var(--contour-color);
+    transition: fill 0.3s 0.05s;
 }
 
 .like-icon.is-liked .contour {
-  fill: var(--contour-color);
-  transition: fill 0.3s;
-  animation-delay: 0.06s;
+    fill: var(--contour-color);
+    transition: fill 0.3s 0.06s;
 }
 
 .like-icon.is-liked .heart {
-  animation: heart 0.3s ease-in 1;
-  animation-delay: 0.1s;
+    animation: heart 0.3s 0.1s ease-in 1;
 }
 
 .like-icon.is-liked .sparks {
-  animation: sparks 0.3s ease-in 1 alternate;
-  animation-delay: 0.3s;
+    animation: sparks 0.3s 0.3s ease-in 1 alternate;
 }
 
 .contour {
-  transition: fill 0.1 linear;
+    transition: fill 0.1 linear;
 }
 
-
-#dialog {
-  width: 357px;
-  height: 193px;
-  padding: 30px 30px 28px;
+#dialog[open] {
+    width: clamp(21.313rem, 21.048rem + 1.127vw, 22.063rem);
+    height: 193px;
+    padding: 30px 30px 28px;
+    box-sizing: border-box;
+    background-color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    display: grid;
+    grid-template-columns: 42px 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+    justify-content: center;
+    column-gap: 20px;
 }
 
 #dialog::backdrop {
-  background-color: rgb(0 0 0 / 0.3);
-  backdrop-filter: blur(7px);
+    background-color: #000;
+    opacity: 75%;
 }
 
 .text-modal {
-  font-family: var(--accent-font-family);
-  font-weight: var(--main-font-weight);
-  color: var(--main-color);
-  font-size: 14px;
-  inline-size: 234px;
-  line-height: 21px;
+    font-family: var(--accent-font-family);
+    font-weight: var(--main-font-weight);
+    color: var(--main-color);
+    font-size: 14px;
+    inline-size: 198px;
+    line-height: 21px;
+    text-transform: uppercase;
 }
 
 .button_close-dialog {
-  font-family: var(--accent-font-family);
-  font-weight: var(--main-font-weight);
-  color: var(--main-color);
-  font-size: 14px;
-  text-transform: uppercase;
-  width: 293px;
-  height: 38px;
-  outline: none;
-  border: 2px solid var(--main-color);
+    font-family: var(--accent-font-family);
+    font-weight: var(--main-font-weight);
+    color: var(--main-color);
+    background-color: var(--bg-color);
+    font-size: 14px;
+    text-transform: uppercase;
+    width: 100%;
+    height: 38px;
+    outline: none;
+    border: 2px solid var(--main-color);
+    cursor: pointer;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    justify-self: center;
 }
 
-.content-modal {
-  height: 63px;
-  display: flex;
-  gap:20px;
-  align-items: center;
-  margin-block-end: 28px;
+.brightness {
+    filter: brightness(200%);
+}
 
+.contrast {
+    filter: contrast(20%);
+}
+
+.blur {
+    filter: blur(0.4rem);
+}
+
+.grayscale {
+    filter: grayscale(0.7);
+}
+
+.saturate {
+    filter: saturate(164%);
+}
+
+.hue-rotate {
+    filter: hue-rotate(145deg);
+}
+
+.sepia {
+    filter: sepia(50%);
+}
+
+.multi {
+    filter: sepia(30%) brightness(150%);
+}
+
+@media (width<=375px) {
+    .header-content {
+        width: 100%;
+        padding-top: 120px;
+    }
+
+    .header_title {
+        line-height: 10px;
+    }
+
+    .theme-menu {
+        margin-block-start: 7px;
+        padding-left: 17px;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .card_title {
+        line-height: 23px;
+        padding: 4px 10px;
+    }
+
+    .floppy_button {
+        height: 84px;
+        flex-direction: column;
+    }
+
+    .floppy {
+        inline-size: 28px;
+        block-size: 28px;
+    }
+
+    #dialog[open] {
+        padding: 28px 30px;
+    }
 }
 
 @keyframes heart {
-  0% {
-    scale: 1;
-  }
-  100% {
-    scale: 1.2;
-  }
+    0% {
+        scale: 1;
+    }
+
+    100% {
+        scale: 1.2;
+    }
 }
 
 @keyframes sparks {
-  0% {
-    fill: none;
-  }
-  100% {
-    fill: var(--contour-color)
-  }
+    0% {
+        fill: none;
+    }
+
+    100% {
+        fill: var(--contour-color);
+    }
 }
 
 @keyframes arrow {
-  0% {
-    left: -20px;
-  }
-  100% {
-    left: -24px;
-  }
+    0% {
+        left: -20px;
+    }
+
+    100% {
+        left: -24px;
+    }
 }
