--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,10 +5,9 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-
 :root.theme-light {
-    --main-font-family: 'Inter';
-    --accent-font-family: 'PressStart2P';
+    --main-font-family: "Inter";
+    --accent-font-family: "PressStart2P";
     --main-color: #000000;
     --bg-color: #fff;
     --grad-color: #d3d3d3;
@@ -17,35 +16,34 @@
     --grad-height: 51%;
     --accent-font-weight: 700;
     --main-font-weight: 400;
-    --contour-color:  #FF0000;
+    --contour-color: #ff0000;
     --blend-color: #fff;
 }
 
-
 @media (prefers-color-scheme: dark) {
-:root{
-    --main-color:#00CC14;
-    --bg-color:#000;
-    --grad-color: #000;
-    --grad-color-from: #007f0c;
-    --grad-color-to: #004306;
-    --grad-height: 50%;
-    --accent-font-weight: 785;
-    --main-font-weight: 465;
-    --contour-color:  #FF0000;
-    --blend-color: #00cc14;
-}
+    :root {
+        --main-color: #00cc14;
+        --bg-color: #000;
+        --grad-color: #000;
+        --grad-color-from: #007f0c;
+        --grad-color-to: #004306;
+        --grad-height: 50%;
+        --accent-font-weight: 785;
+        --main-font-weight: 465;
+        --contour-color: #ff0000;
+        --blend-color: #00cc14;
+    }
 }
 
 :root.theme-dark {
-    --main-color:#00CC14;
-    --bg-color:#000;
+    --main-color: #00cc14;
+    --bg-color: #000;
     --grad-color: #000;
     --grad-color-from: #007f0c;
     --grad-color-to: #004306;
     --grad-height: 50%;
     --accent-font-weight: 785;
     --main-font-weight: 465;
-    --contour-color:  #FF0000;
+    --contour-color: #ff0000;
     --blend-color: #00cc14;
 }
