--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -12,5 +12,5 @@
     src: url(./Inter-Variable.woff2) format("woff2 supports variations"),
         url(./Inter-Variable.woff2) format("woff2-variations");
     font-weight: 400 785;
-    font-variation-settings: "wdth" 400, "wdth" 785;
+    font-variation-settings: 400 785;
 }
