--- a/styles/style.css
+++ b/styles/style.css
@@ -18,8 +18,8 @@
     min-inline-size: 320px;
     min-block-size: 100dvb;
     font-family: var(--main-font-family), sans-serif;
-    font-variation-settings: "wdth" var(--main-font-weight),
-        "wdth" var(--accent-font-weight);
+    font-variation-settings: 'wght' var(--main-font-weight),
+    'wght'  var(--accent-font-weight);
         font-variation-settings: 400 785;   
     font-size: 18px;
     background-color: var(--bg-color);
