--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,9 @@
 .page {
     min-inline-size: 320px;
     min-block-size: 100dvb;
-    font-family: var(--main-font-family), sans-serif;
+    font-family: var(--main-font-family), serif;
     font-variation-settings: 'wght' var(--main-font-weight),
-    'wght'  var(--accent-font-weight);
-        font-variation-settings: 400 785;   
+    'wght'  var(--accent-font-weight);  
     font-size: 18px;
     background-color: var(--bg-color);
     background-position: center;
@@ -68,7 +67,7 @@
 
 .logo_link {
     text-decoration: none;
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     text-transform: uppercase;
     font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
     font-weight: 400;
@@ -76,7 +75,7 @@
 }
 
 .header_title {
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     text-transform: uppercase;
     font-size: clamp(0.875rem, 0.677rem + 0.845vw, 1.438rem);
     font-weight: var(--main-font-weight);
@@ -137,7 +136,7 @@
 }
 
 .theme-menu__item {
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 400;
@@ -160,7 +159,7 @@
 }
 
 .card_title {
-    font-family: var(--main-font-family);
+    font-family: var(--main-font-family), serif;
     font-weight: (--accent-font-weight);
     color: var(--main-color);
     font-size: 18px;
@@ -183,7 +182,7 @@
 }
 
 .label {
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     font-size: 14px;
     color: var(--main-color);
     -webkit-text-stroke: 1px;
@@ -286,7 +285,7 @@
 }
 
 .button__text {
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     font-weight: var(--main-font-weight);
     color: var(--blend-color);
     font-size: 14px;
@@ -445,7 +444,7 @@
 }
 
 .text-modal {
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     font-weight: var(--main-font-weight);
     color: var(--main-color);
     font-size: 14px;
@@ -455,7 +454,7 @@
 }
 
 .button_close-dialog {
-    font-family: var(--accent-font-family);
+    font-family: var(--accent-font-family), serif;
     font-weight: var(--main-font-weight);
     color: var(--main-color);
     background-color: var(--bg-color);
