--- a/styles/style.css
+++ b/styles/style.css
@@ -151,8 +151,8 @@
 }
 
 .card {
-    width: clamp(23.188rem, 15.947rem + 30.892vw, 43.75rem);
-    border: 2px solid var(--main-color);
+    width: clamp(23.438rem, 16.373rem + 30.141vw, 43.5rem);
+    outline: 2px solid var(--main-color);
     margin: auto;
     background-color: var(--bg-color);
     margin-block-end: 50px;
@@ -177,6 +177,7 @@
 
 .card_img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
     overflow: hidden;
 }
@@ -193,8 +194,8 @@
     text-transform: uppercase;
     filter: opacity(50%);
     position: absolute;
-    top: 20px;
-    right: 10px;
+    top: 25px;
+    right: 25px;
     z-index: 1;
 }
 
