--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,33 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes heart {
+    0% {
+        scale: 1;
+    }
+
+    100% {
+        scale: 1.5;
+    }
+}
+
+@keyframes sparks {
+    0% {
+        fill: none;
+    }
+
+    100% {
+        fill: var(--contour-color);
+    }
+}
+
+@keyframes arrow {
+    0% {
+        left: -20px;
+    }
+
+    100% {
+        left: -24px;
+    }
+}
