--- a/styles/themes.css
+++ b/styles/themes.css
@@ -18,6 +18,7 @@
     --main-font-weight: 400;
     --contour-color: #ff0000;
     --blend-color: #fff;
+    --shadow-color: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,6 +33,7 @@
         --main-font-weight: 465;
         --contour-color: #ff0000;
         --blend-color: #00cc14;
+        --shadow-color: #00cc14;
     }
 }
 
@@ -46,4 +48,5 @@
     --main-font-weight: 465;
     --contour-color: #ff0000;
     --blend-color: #00cc14;
+    --shadow-color: #00cc14;
 }
