--- a/styles/style.css
+++ b/styles/style.css
@@ -411,7 +411,7 @@
 
 .dialog[open] {
     inline-size: clamp(21.313rem, 21.048rem + 1.127vw, 22.063rem);
-    min-block-size: 191px;
+    max-block-size: 191px;
     padding: 30px 30px 0px;
     background-color: var(--bg-color);
     border: 2px solid var(--main-color);
@@ -518,6 +518,6 @@
     }
 
     .dialog[open] {
-        padding: 28px 30px;
+        padding: 28px 30px 0;
     }
 }
